# AlphaMesh

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/domain/: enums.py
backend/app/domain/models/: backtest.py  market.py  order.py  research.py  risk.py  strategy.py
backend/app/schemas/: agents.py  automation.py  backtest.py  case.py  chat.py  common.py  harness.py  market.py  memory.py  order.py  portfolio.py  research.py  risk.py  strategy.py
backend/app/services/agents/: base.py  react_runtime.py  research_workflow.py  run_logger.py  runtime.py  skill_loader.py  tool_registry.py
backend/app/services/automation/: base.py  checkpoint.py  flow.py
backend/app/services/backtest/: base.py  bias_guard.py  costs.py  engine.py  metrics.py
backend/app/services/broker/: base.py  factory.py  futu_broker.py  ibkr_broker.py  (+3 more)
backend/app/tests/: test_agent_runs.py  test_agents_api.py  test_automation_flow.py  test_backtest.py  test_chat_api.py  test_harness_api.py  test_health.py  test_llm_fallback.py  test_llm_output_guard.py  test_llm_provider.py  test_llm_research_agent.py  test_longbridge_connector.py  test_memory_api.py  test_memory_compressor.py  test_memory_store.py  test_memory_tokenizer.py  test_multi_agent_workflow.py  test_paper_orders.py  test_react_runtime.py  test_risk.py  test_strategy.py
(+99 files in other folders)
